--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
       "url": "https://github.com/orgs/coreui/people"
     }
   ],
-  "homepage": ".",
+  "homepage": "http://mockup-ps.github.io/helpkapal",
   "copyright": "Copyright 2017-2020 creativeLabs Łukasz Holeczek",
   "license": "MIT",
   "private": true,
@@ -30,24 +30,33 @@
     "@coreui/react": "^3.2.3",
     "@coreui/react-chartjs": "^1.0.1",
     "@coreui/utils": "^1.3.1",
+    "chart.js": "^2.9.4",
     "classnames": "^2.2.6",
     "core-js": "^3.6.5",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.3",
+    "firebase": "^8.1.1",
+    "google-spreadsheet": "^3.0.14",
     "node-sass": "^4.14.1",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-app-polyfill": "^1.0.6",
     "react-dom": "^16.13.1",
+    "react-hover-animation": "^2.1.1",
     "react-redux": "7.2.1",
     "react-router-dom": "^5.2.0",
+    "react-select": "^3.1.1",
+    "react-uuid": "^1.0.2",
     "redux": "4.0.5"
   },
   "devDependencies": {
-    "react-scripts": "^3.4.2",
-    "auto-changelog": "2.2.0"
+    "auto-changelog": "2.2.0",
+    "gh-pages": "^3.1.0",
+    "react-scripts": "^3.4.2"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
